--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,6 +25,17 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+
+        <form action="/action_page.php">
+          <input type="checkbox" id="capital" 
+          <label for="vehicle1"> Add Capitals</label><br>
+          <input type="checkbox" id="number" >
+          <label for="vehicle2"> Add Numbersr</label><br>
+          <input type="checkbox" id="special" >
+          <label for="vehicle3"> Add Special Characters</label><br><br>
+        
+        </form>
+
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
