added some if else and tried not using 'password'

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,11 +28,11 @@
 
         <form action="/action_page.php">
           <input type="checkbox" id="capital" 
-          <label for="vehicle1"> Add Capitals</label><br>
+          <label for="capitals"> Add Capitals</label><br>
           <input type="checkbox" id="number" >
-          <label for="vehicle2"> Add Numbersr</label><br>
+          <label for="number"> Add Numbersr</label><br>
           <input type="checkbox" id="special" >
-          <label for="vehicle3"> Add Special Characters</label><br><br>
+          <label for="special"> Add Special Characters</label><br><br>
         
         </form>
 
