spellchecked and moved folders around

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <input type="checkbox" id="capital" 
           <label for="capitals"> Add Capitals</label><br>
           <input type="checkbox" id="number" >
-          <label for="number"> Add Numbersr</label><br>
+          <label for="number"> Add Numbers</label><br>
           <input type="checkbox" id="special" >
           <label for="special"> Add Special Characters</label><br><br>
         
